# dirdiff

./: Dockerfile  README.md  pyproject.toml
src/dirdiff/: app.py  cli.py  directories.py  logic.py  main.py  rich_imports.py
