[project]
name = "dirdiff"
version = "0.1.0"
description = "Shows what Diff between two directories"
readme = "README.md"
authors = [
    { name = "Joao Hugo Vasconcelos", email = "jhugovasconcelos93@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "rich>=14.0.0",
]

[project.scripts]
dirdiff = "dirdiff.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
