[project]
name = "dirdiff"
version = "0.1.1"
description = "CLI tool that prints diff between two given directories"
readme = "README.md"
authors = [
    { name = "Joao Hugo Vasconcelos", email = "jhugovasconcelos93@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "rich>=14.0.0",
]

[project.scripts]
dirdiff = "dirdiff.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
